name:                ignis
version:             0.0.1.0
-- synopsis:            
-- description:         
homepage:            https://github.com/aloiscochard/ignis
license:             Apache-2.0
license-file:        LICENSE
author:              Alois Cochard, Ismael Juma
maintainer:          alois.cochard@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable ignis
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  -- hs-source-dirs:      
  default-language:    Haskell2010
